force-app/main/default/objects/Verified_School__c/Verified_School__c.object-meta.xml
<CustomObject>
    <label>Verified School</label>
    <nameField>
        <label>Verified School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Verified Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>