force-app/main/default/objects/Verified_School__c/fields/averageStandardScore__c.field-meta.xml
<CustomField>
    <fullName>averageStandardScore__c</fullName>
    <label>averageStandardScore</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>