force-app/main/default/objects/Verified_School__c/fields/cityURL__c.field-meta.xml
<CustomField>
    <fullName>cityURL__c</fullName>
    <label>cityURL</label>
    <type>Url</type>
</CustomField>