force-app/main/default/objects/Verified_School__c/fields/countyURL__c.field-meta.xml
<CustomField>
    <fullName>countyURL__c</fullName>
    <label>countyURL</label>
    <type>Url</type>
</CustomField>