force-app/main/default/objects/Verified_School__c/fields/demographicYear__c.field-meta.xml
<CustomField>
    <fullName>demographicYear__c</fullName>
    <label>demographicYear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>