force-app/main/default/objects/Verified_School__c/fields/districtID__c.field-meta.xml
<CustomField>
    <fullName>districtID__c</fullName>
    <externalId>true</externalId>
    <label>districtID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>