force-app/main/default/objects/Verified_School__c/fields/districtName__c.field-meta.xml
<CustomField>
    <fullName>districtName__c</fullName>
    <label>districtName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>