force-app/main/default/objects/Verified_School__c/fields/districtRankUrl__c.field-meta.xml
<CustomField>
    <fullName>districtRankUrl__c</fullName>
    <label>districtRankUrl</label>
    <type>Url</type>
</CustomField>