force-app/main/default/objects/Verified_School__c/fields/districtURL__c.field-meta.xml
<CustomField>
    <fullName>districtURL__c</fullName>
    <label>districtURL</label>
    <type>Url</type>
</CustomField>