force-app/main/default/objects/Verified_School__c/fields/highGrade__c.field-meta.xml
<CustomField>
    <fullName>highGrade__c</fullName>
    <label>highGrade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>