force-app/main/default/objects/Verified_School__c/fields/htmlAddress__c.field-meta.xml
<CustomField>
    <fullName>htmlAddress__c</fullName>
    <label>htmlAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>