force-app/main/default/objects/Verified_School__c/fields/idSchoolDigger__c.field-meta.xml
<CustomField>
    <fullName>idSchoolDigger__c</fullName>
    <externalId>true</externalId>
    <label>idSchoolDigger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>