force-app/main/default/objects/Verified_School__c/fields/isCharterSchool__c.field-meta.xml
<CustomField>
    <fullName>isCharterSchool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCharterSchool</label>
    <type>Checkbox</type>
</CustomField>