force-app/main/default/objects/Verified_School__c/fields/isMagnetSchool__c.field-meta.xml
<CustomField>
    <fullName>isMagnetSchool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMagnetSchool</label>
    <type>Checkbox</type>
</CustomField>