force-app/main/default/objects/Verified_School__c/fields/isPrivate__c.field-meta.xml
<CustomField>
    <fullName>isPrivate__c</fullName>
    <label>isPrivate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>