force-app/main/default/objects/Verified_School__c/fields/isTitle1School__c.field-meta.xml
<CustomField>
    <fullName>isTitle1School__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTitle1School</label>
    <type>Checkbox</type>
</CustomField>