force-app/main/default/objects/Verified_School__c/fields/isTitle1Schoolwide__c.field-meta.xml
<CustomField>
    <fullName>isTitle1Schoolwide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTitle1Schoolwide</label>
    <type>Checkbox</type>
</CustomField>