force-app/main/default/objects/Verified_School__c/fields/isVirtualSchool__c.field-meta.xml
<CustomField>
    <fullName>isVirtualSchool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isVirtualSchool</label>
    <type>Checkbox</type>
</CustomField>