force-app/main/default/objects/Verified_School__c/fields/latitude__c.field-meta.xml
<CustomField>
    <fullName>latitude__c</fullName>
    <label>latitude</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>