force-app/main/default/objects/Verified_School__c/fields/longitude__c.field-meta.xml
<CustomField>
    <fullName>longitude__c</fullName>
    <label>longitude</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>