force-app/main/default/objects/Verified_School__c/fields/lowGrade__c.field-meta.xml
<CustomField>
    <fullName>lowGrade__c</fullName>
    <label>lowGrade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>