force-app/main/default/objects/Verified_School__c/fields/numAsianStudents__c.field-meta.xml
<CustomField>
    <fullName>numAsianStudents__c</fullName>
    <label>numAsianStudents</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>