force-app/main/default/objects/Verified_School__c/fields/numHispanicStudents__c.field-meta.xml
<CustomField>
    <fullName>numHispanicStudents__c</fullName>
    <label>numHispanicStudents</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>