force-app/main/default/objects/Verified_School__c/fields/numIndianStudents__c.field-meta.xml
<CustomField>
    <fullName>numIndianStudents__c</fullName>
    <label>numIndianStudents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>