force-app/main/default/objects/Verified_School__c/fields/numPacificIslandStudents__c.field-meta.xml
<CustomField>
    <fullName>numPacificIslandStudents__c</fullName>
    <label>numPacificIslandStudents</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>