force-app/main/default/objects/Verified_School__c/fields/numStudents__c.field-meta.xml
<CustomField>
    <fullName>numStudents__c</fullName>
    <label>numStudents</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>