force-app/main/default/objects/Verified_School__c/fields/numTwoOrMoreStudents__c.field-meta.xml
<CustomField>
    <fullName>numTwoOrMoreStudents__c</fullName>
    <label>numTwoOrMoreStudents</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>