force-app/main/default/objects/Verified_School__c/fields/numUnspecifiedRaceStudents__c.field-meta.xml
<CustomField>
    <fullName>numUnspecifiedRaceStudents__c</fullName>
    <label>numUnspecifiedRaceStudents</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>