force-app/main/default/objects/Verified_School__c/fields/numWhiteStudents__c.field-meta.xml
<CustomField>
    <fullName>numWhiteStudents__c</fullName>
    <label>numWhiteStudents</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>