force-app/main/default/objects/Verified_School__c/fields/PercentAfricanAmercanStudent__c.field-meta.xml
<CustomField>
    <fullName>PercentAfricanAmercanStudent__c</fullName>
    <label>PercentAfricanAmercanStudent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>