force-app/main/default/objects/Verified_School__c/fields/PercentAsianStudents__c.field-meta.xml
<CustomField>
    <fullName>PercentAsianStudents__c</fullName>
    <label>PercentAsianStudents</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>