force-app/main/default/objects/Verified_School__c/fields/percentFeeDiscount__c.field-meta.xml
<CustomField>
    <fullName>percentFeeDiscount__c</fullName>
    <label>percentFeeDiscount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>