force-app/main/default/objects/Verified_School__c/fields/PercentHispanicStudents__c.field-meta.xml
<CustomField>
    <fullName>PercentHispanicStudents__c</fullName>
    <label>percentHispanicStudents</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>