force-app/main/default/objects/Verified_School__c/fields/percentIndianStudents__c.field-meta.xml
<CustomField>
    <fullName>percentIndianStudents__c</fullName>
    <label>percentIndianStudents</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>