force-app/main/default/objects/Verified_School__c/fields/percentPacificIslandStudents__c.field-meta.xml
<CustomField>
    <fullName>percentPacificIslandStudents__c</fullName>
    <label>percentPacificIslandStudents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>