force-app/main/default/objects/Verified_School__c/fields/percentTwoOrMore__c.field-meta.xml
<CustomField>
    <fullName>percentTwoOrMore__c</fullName>
    <label>percentTwoOrMore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>