force-app/main/default/objects/Verified_School__c/fields/percentWhiteStudents__c.field-meta.xml
<CustomField>
    <fullName>percentWhiteStudents__c</fullName>
    <label>percentWhiteStudents</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>