force-app/main/default/objects/Verified_School__c/fields/privateCoed__c.field-meta.xml
<CustomField>
    <fullName>privateCoed__c</fullName>
    <label>privateCoed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>