force-app/main/default/objects/Verified_School__c/fields/privateDays__c.field-meta.xml
<CustomField>
    <fullName>privateDays__c</fullName>
    <label>privateDays</label>
    <length>255</length>
    <type>Text</type>
</CustomField>