force-app/main/default/objects/Verified_School__c/fields/privateHasLibrary__c.field-meta.xml
<CustomField>
    <fullName>privateHasLibrary__c</fullName>
    <label>privateHasLibrary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>