force-app/main/default/objects/Verified_School__c/fields/privateHours__c.field-meta.xml
<CustomField>
    <fullName>privateHours__c</fullName>
    <label>privateHours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>