force-app/main/default/objects/Verified_School__c/fields/privateOrientation__c.field-meta.xml
<CustomField>
    <fullName>privateOrientation__c</fullName>
    <label>privateOrientation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>