force-app/main/default/objects/Verified_School__c/fields/rankLevel__c.field-meta.xml
<CustomField>
    <fullName>rankLevel__c</fullName>
    <label>rankLevel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>