force-app/main/default/objects/Verified_School__c/fields/rankMovement__c.field-meta.xml
<CustomField>
    <fullName>rankMovement__c</fullName>
    <label>rankMovement</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>