force-app/main/default/objects/Verified_School__c/fields/rankOf__c.field-meta.xml
<CustomField>
    <fullName>rankOf__c</fullName>
    <label>rankOf</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>