force-app/main/default/objects/Verified_School__c/fields/rankStars__c.field-meta.xml
<CustomField>
    <fullName>rankStars__c</fullName>
    <label>rankStars</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>