force-app/main/default/objects/Verified_School__c/fields/rankStatewidePercentage__c.field-meta.xml
<CustomField>
    <fullName>rankStatewidePercentage__c</fullName>
    <label>rankStatewidePercentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>