force-app/main/default/objects/Verified_School__c/fields/rankYear__c.field-meta.xml
<CustomField>
    <fullName>rankYear__c</fullName>
    <label>rankYear</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>