force-app/main/default/objects/Verified_School__c/fields/schoolLevel__c.field-meta.xml
<CustomField>
    <fullName>schoolLevel__c</fullName>
    <label>schoolLevel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Middle</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Elementary</fullName>
            </value>
            <value>
                <fullName>prekindergarten</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>