force-app/main/default/objects/Verified_School__c/fields/schoolRank__c.field-meta.xml
<CustomField>
    <fullName>schoolRank__c</fullName>
    <label>schoolRank</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>