force-app/main/default/objects/Verified_School__c/fields/zip4__c.field-meta.xml
<CustomField>
    <fullName>zip4__c</fullName>
    <label>zip4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>