force-app/main/default/objects/Verified_School__c/fields/zipURL__c.field-meta.xml
<CustomField>
    <fullName>zipURL__c</fullName>
    <label>zipURL</label>
    <type>Url</type>
</CustomField>